[gd_scene load_steps=15 format=3 uid="uid://cg841d3cpmpjd"]

[ext_resource type="PackedScene" uid="uid://bnj8i1ngctqf2" path="res://scenes/deck_n_hand.tscn" id="1_vfrus"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1_wrmrq"]
[ext_resource type="Script" path="res://scripts/Character.gd" id="2_4j42c"]
[ext_resource type="Script" path="res://scripts/GameController.gd" id="2_hmnxx"]
[ext_resource type="Texture2D" uid="uid://cprhgxh2562ej" path="res://sprites/player.png" id="2_i104c"]
[ext_resource type="Texture2D" uid="uid://td5peavms807" path="res://sprites/Icons/defendicon.png" id="5_4i1j7"]
[ext_resource type="Texture2D" uid="uid://dde0vmmtkx35f" path="res://sprites/Icons/damage_change_sword.png" id="7_y22q8"]
[ext_resource type="Texture2D" uid="uid://ddvyop1nqm207" path="res://sprites/Icons/bleed.png" id="8_b0jng"]
[ext_resource type="Texture2D" uid="uid://ct103svanepry" path="res://sprites/Enemies/Mushroom.png" id="9_xtex8"]
[ext_resource type="Texture2D" uid="uid://5prk4i512iqu" path="res://sprites/Icons/deckbutton.png" id="10_o1fi1"]
[ext_resource type="PackedScene" uid="uid://i7eh31bvm4b6" path="res://scenes/ui/card_container.tscn" id="10_wvtpg"]
[ext_resource type="Texture2D" uid="uid://ct0iq5rgs1l27" path="res://sprites/Icons/deck_open.png" id="11_yg7ln"]
[ext_resource type="Texture2D" uid="uid://dhp03v4vdr3xn" path="res://sprites/Icons/deck_hover.png" id="12_wml7y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70d4t"]
bg_color = Color(1, 0.117647, 0.211765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main" type="Node2D" node_paths=PackedStringArray("player_character")]
position = Vector2(-81, -3)
script = ExtResource("1_wrmrq")
player_character = NodePath("GameScreen/PlayerCharacter")

[node name="GameController" type="Node2D" parent="."]
position = Vector2(-207, 14)
script = ExtResource("2_hmnxx")

[node name="DeckHand" parent="." instance=ExtResource("1_vfrus")]
position = Vector2(58, -17)

[node name="GameScreen" type="Node2D" parent="."]
position = Vector2(-207, 14)

[node name="PlayerCharacter" type="Node2D" parent="GameScreen"]
position = Vector2(693, 725)
script = ExtResource("2_4j42c")

[node name="PlayerSprite" type="Sprite2D" parent="GameScreen/PlayerCharacter"]
position = Vector2(181, 176)
scale = Vector2(4.2, 4.2)
texture = ExtResource("2_i104c")

[node name="Healthbar" type="ProgressBar" parent="GameScreen/PlayerCharacter"]
offset_left = 73.0
offset_top = -290.0
offset_right = 294.0
offset_bottom = -266.0
theme_override_styles/fill = SubResource("StyleBoxFlat_70d4t")
max_value = 15.0
value = 15.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthText" type="Label" parent="GameScreen/PlayerCharacter/Healthbar"]
layout_mode = 0
offset_left = 25.0
offset_top = 3.0
offset_right = 187.0
offset_bottom = 23.0
text = "15/15"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="GameScreen/PlayerCharacter"]
visible = false
position = Vector2(254, -317)
scale = Vector2(1.15625, 1.125)
texture = ExtResource("5_4i1j7")

[node name="ShieldNum" type="Label" parent="GameScreen/PlayerCharacter/Shield"]
offset_left = -73.5135
offset_top = -19.5555
offset_right = -14.5135
offset_bottom = 29.4445
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2

[node name="AttackChange" type="Sprite2D" parent="GameScreen/PlayerCharacter"]
visible = false
position = Vector2(283, -244)
scale = Vector2(0.71875, 0.734375)
texture = ExtResource("7_y22q8")

[node name="AttackChgNum" type="Label" parent="GameScreen/PlayerCharacter/AttackChange"]
offset_left = -57.0435
offset_top = -28.5958
offset_right = -21.0435
offset_bottom = 20.4042
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Bleeding" type="Sprite2D" parent="GameScreen/PlayerCharacter"]
visible = false
position = Vector2(329, -279)
scale = Vector2(0.687501, 0.8125)
texture = ExtResource("8_b0jng")

[node name="BleedingLabel" type="Label" parent="GameScreen/PlayerCharacter/Bleeding"]
offset_left = -49.0
offset_top = -16.0
offset_right = -17.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2
justification_flags = 162

[node name="TurnLabel" type="Label" parent="GameScreen/PlayerCharacter/Bleeding"]
offset_left = -7.27272
offset_top = -12.3077
offset_right = 6.72728
offset_bottom = 24.6923
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="GameScreen/PlayerCharacter"]

[node name="EnemyCharacter" type="Node2D" parent="GameScreen"]
position = Vector2(1562, 709)
script = ExtResource("2_4j42c")

[node name="EnemySprite" type="Sprite2D" parent="GameScreen/EnemyCharacter"]
position = Vector2(186, 15)
scale = Vector2(4.2, 4.2)
texture = ExtResource("9_xtex8")

[node name="Healthbar" type="ProgressBar" parent="GameScreen/EnemyCharacter"]
offset_left = 73.0
offset_top = -290.0
offset_right = 294.0
offset_bottom = -266.0
theme_override_styles/fill = SubResource("StyleBoxFlat_70d4t")
max_value = 15.0
value = 15.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthText" type="Label" parent="GameScreen/EnemyCharacter/Healthbar"]
layout_mode = 0
offset_left = 25.0
offset_top = 3.0
offset_right = 187.0
offset_bottom = 23.0
text = "15/15"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Shield" type="Sprite2D" parent="GameScreen/EnemyCharacter"]
visible = false
position = Vector2(254, -317)
scale = Vector2(1.15625, 1.125)
texture = ExtResource("5_4i1j7")

[node name="ShieldNum" type="Label" parent="GameScreen/EnemyCharacter/Shield"]
offset_left = -73.5135
offset_top = -19.5555
offset_right = -14.5135
offset_bottom = 29.4445
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2

[node name="AttackChange" type="Sprite2D" parent="GameScreen/EnemyCharacter"]
visible = false
position = Vector2(283, -244)
scale = Vector2(0.71875, 0.734375)
texture = ExtResource("7_y22q8")

[node name="AttackChgNum" type="Label" parent="GameScreen/EnemyCharacter/AttackChange"]
offset_left = -57.0435
offset_top = -28.5958
offset_right = -21.0435
offset_bottom = 20.4042
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Bleeding" type="Sprite2D" parent="GameScreen/EnemyCharacter"]
visible = false
position = Vector2(329, -279)
scale = Vector2(0.687501, 0.8125)
texture = ExtResource("8_b0jng")

[node name="BleedingLabel" type="Label" parent="GameScreen/EnemyCharacter/Bleeding"]
offset_left = -49.0
offset_top = -16.0
offset_right = -17.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 2
justification_flags = 162

[node name="TurnLabel" type="Label" parent="GameScreen/EnemyCharacter/Bleeding"]
offset_left = -5.81818
offset_top = -12.3077
offset_right = 8.18182
offset_bottom = 24.6923
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="ManaAmount" type="Label" parent="."]
offset_left = 198.0
offset_top = 45.0
offset_right = 272.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 100
text = "10"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Inflict1Button" type="Button" parent="."]
visible = false
offset_left = 488.0
offset_top = 187.0
offset_right = 581.0
offset_bottom = 215.0
text = "Inflict 1 damage"

[node name="Inflict3Button" type="Button" parent="."]
visible = false
offset_left = 619.0
offset_top = 187.0
offset_right = 715.0
offset_bottom = 215.0
text = "Inflict 3 damage"

[node name="EndTurn" type="Button" parent="."]
offset_left = 1000.0
offset_top = 50.0
offset_right = 1160.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 36
text = "End Turn
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.839216, 0, 0.0117647, 0.337255)

[node name="Label" type="Label" parent="CanvasLayer/GameOverOverlay"]
layout_mode = 0
offset_left = 916.0
offset_top = 568.0
offset_right = 1232.0
offset_bottom = 664.0
theme_override_font_sizes/font_size = 80
text = "Game Over
"

[node name="Button" type="Button" parent="CanvasLayer/GameOverOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.208
anchor_bottom = 0.226
offset_left = 1017.0
offset_top = 669.0
offset_right = 698.0
offset_bottom = 406.4
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="VictoryOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.368627, 0.113725, 0.462745)

[node name="Label" type="Label" parent="CanvasLayer/VictoryOverlay"]
layout_mode = 0
offset_left = 982.0
offset_top = 565.0
offset_right = 1172.0
offset_bottom = 661.0
theme_override_font_sizes/font_size = 80
text = "Victory
"

[node name="VictoryButton" type="Button" parent="CanvasLayer/VictoryOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.208
anchor_bottom = 0.226
offset_left = 977.0
offset_top = 663.0
offset_right = 676.0
offset_bottom = 400.4
theme_override_font_sizes/font_size = 40
text = "Advance"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 175.0
offset_top = 55.0
offset_right = 1850.0
offset_bottom = 993.0

[node name="DeckViewWindow" type="ScrollContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(1750, 938)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -871.0
offset_top = -706.0
offset_right = 930.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/DeckViewWindow"]
clip_contents = true
custom_minimum_size = Vector2(1750, 938)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CardContainer" parent="CanvasLayer/DeckViewWindow/HFlowContainer" instance=ExtResource("10_wvtpg")]
layout_mode = 2

[node name="DeckButton" type="TextureButton" parent="."]
offset_left = 198.0
offset_top = 1382.0
offset_right = 292.0
offset_bottom = 1478.0
texture_normal = ExtResource("10_o1fi1")
texture_pressed = ExtResource("11_yg7ln")
texture_hover = ExtResource("12_wml7y")
stretch_mode = 0

[connection signal="card_activated" from="DeckHand" to="." method="_on_deck_hand_card_activated"]
[connection signal="pressed" from="Inflict1Button" to="." method="_on_inflict_1_button_pressed"]
[connection signal="pressed" from="Inflict3Button" to="." method="_on_inflict_3_button_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverOverlay/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VictoryOverlay/VictoryButton" to="." method="_on_victory_button_pressed"]
[connection signal="pressed" from="DeckButton" to="." method="_on_deck_button_pressed"]
